grammars/tree-sitter-adgl/test/corpus/pmtud.txt
================================================================================
PMTUD blackhole
================================================================================

// Rule 3 — PMTUD blackhole (canonical: anchor + correlate + if/else).
// Resolves Missing Data Paradox via watermark deferred eval (08-stream-watermarking §5).
ruleset "airpulse.tcp_diagnostics" {
    version = "1.0"
    requires = ["l3-deep", "topology"]

    mutually_exclusive(PmtudBlackhole, Congestion, TransientL2Disruption)

    evidence pmtud_hypothesis {
        scope: Session
        anchor rtx: event(tcp.retransmission_burst) {
            rtx.segment_size > 1400
        }
        correlate ptb: event(icmp.ptb) {
            topo: same_session(rtx.target, ptb.target)
            time: ptb.time in [rtx.time - 500ms, rtx.time + 1s]
        }
        if present(ptb) {
            infer Cause(PmtudBlackhole) { target: rtx.target, weight: +85, evidence: [rtx, ptb] }
        } else {
            infer Cause(PmtudBlackhole) { target: rtx.target, weight: +35, evidence: [rtx] }
            action request_observation(icmp.visibility) { target: rtx.path }
        }
    }

    decision pmtud_verdict {
        scope: Session
        anchor c: Cause(PmtudBlackhole) { c.confidence >= 80 }
        emit Problem(XlIcmpTcpMss) { severity: High, evidence: [c], sarif_id: "l3_pmtud_blackhole" }
    }
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (ruleset_decl
    (string)
    (ruleset_header
      (version_decl
        (string))
      (header_decl
        (requires_decl
          (string)
          (string)))
      (header_decl
        (mutually_exclusive_decl
          (ident_list
            (identifier)
            (identifier)
            (identifier)))))
    (rule
      (evidence_rule
        (identifier)
        (scope_type)
        (anchor_block
          (identifier)
          (kind_ident
            (identifier)
            (identifier))
          (expr
            (logic_or
              (logic_and
                (equality
                  (additive
                    (multiplicative
                      (unary
                        (postfix
                          (identifier)
                          (identifier)))))
                  (additive
                    (multiplicative
                      (unary
                        (postfix
                          (integer))))))))))
        (correlate_block
          (identifier)
          (correlate_source
            (kind_ident
              (identifier)
              (identifier)))
          (topo_predicate
            (identifier)
            (expr_list
              (expr
                (logic_or
                  (logic_and
                    (equality
                      (additive
                        (multiplicative
                          (unary
                            (postfix
                              (identifier)
                              (identifier)))))))))
              (expr
                (logic_or
                  (logic_and
                    (equality
                      (additive
                        (multiplicative
                          (unary
                            (postfix
                              (identifier)
                              (identifier)))))))))))
          (time_window
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier)))))))))
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier))))
                      (multiplicative
                        (unary
                          (postfix
                            (duration)))))))))
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier))))
                      (multiplicative
                        (unary
                          (postfix
                            (duration)))))))))))
        (if_else_block
          (expr
            (logic_or
              (logic_and
                (equality
                  (additive
                    (multiplicative
                      (unary
                        (postfix
                          (present_expr
                            (identifier))))))))))
          (infer_stmt
            (identifier)
            (infer_field
              (expr
                (logic_or
                  (logic_and
                    (equality
                      (additive
                        (multiplicative
                          (unary
                            (postfix
                              (identifier)
                              (identifier))))))))))
            (infer_field
              (signed_integer
                (integer)))
            (infer_field
              (ref_list
                (identifier)
                (identifier))))
          (infer_stmt
            (identifier)
            (infer_field
              (expr
                (logic_or
                  (logic_and
                    (equality
                      (additive
                        (multiplicative
                          (unary
                            (postfix
                              (identifier)
                              (identifier))))))))))
            (infer_field
              (signed_integer
                (integer)))
            (infer_field
              (ref_list
                (identifier))))
          (action_stmt
            (identifier)
            (kind_ident
              (identifier)
              (identifier))
            (action_field
              (expr
                (logic_or
                  (logic_and
                    (equality
                      (additive
                        (multiplicative
                          (unary
                            (postfix
                              (identifier)
                              (identifier))))))))))))))
    (rule
      (decision_rule
        (identifier)
        (scope_type)
        (decision_anchor
          (identifier)
          (cause_anchor
            (identifier)
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier)))))
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (integer)))))))))))
        (emit_stmt
          (identifier)
          (emit_field
            (severity))
          (emit_field
            (ref_list
              (identifier)))
          (emit_field
            (string)))))))
