grammars/tree-sitter-adgl/test/corpus/tcp_seed.txt
================================================================================
TCP retrans seed
================================================================================

// Rule 1 — one event seeds multiple competing causes.
// Correction C5: mutually_exclusive declared so AmbiguityNode can synthesize
// when two causes reach Probable (40-79) with Δconfidence < 15 (03-semantics §4).
ruleset "airpulse.tcp_seed" {
    version = "1.0"
    requires = ["l3-deep", "topology"]

    mutually_exclusive(Congestion, PmtudBlackhole, TransientL2Disruption)

    evidence tcp_retrans_seed {
        scope: Session
        anchor rtx: event(tcp.retransmission_burst)
        infer Cause(Congestion)            { target: rtx.target, weight: +35, evidence: [rtx] }
        infer Cause(PmtudBlackhole)        { target: rtx.target, weight: +35, evidence: [rtx] }
        infer Cause(TransientL2Disruption) { target: rtx.target, weight: +20, evidence: [rtx] }
    }
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (ruleset_decl
    (string)
    (ruleset_header
      (version_decl
        (string))
      (header_decl
        (requires_decl
          (string)
          (string)))
      (header_decl
        (mutually_exclusive_decl
          (ident_list
            (identifier)
            (identifier)
            (identifier)))))
    (rule
      (evidence_rule
        (identifier)
        (scope_type)
        (anchor_block
          (identifier)
          (kind_ident
            (identifier)
            (identifier)))
        (infer_stmt
          (identifier)
          (infer_field
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier))))))))))
          (infer_field
            (signed_integer
              (integer)))
          (infer_field
            (ref_list
              (identifier))))
        (infer_stmt
          (identifier)
          (infer_field
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier))))))))))
          (infer_field
            (signed_integer
              (integer)))
          (infer_field
            (ref_list
              (identifier))))
        (infer_stmt
          (identifier)
          (infer_field
            (expr
              (logic_or
                (logic_and
                  (equality
                    (additive
                      (multiplicative
                        (unary
                          (postfix
                            (identifier)
                            (identifier))))))))))
          (infer_field
            (signed_integer
              (integer)))
          (infer_field
            (ref_list
              (identifier))))))))
